# cli

./: .gitignore  .pre-commit-config.yaml  .zappr.yaml  Makefile  README.md  delivery.yaml  generate_version.py  pyproject.toml
zalando_cli_bundle/: cli.py
